fixed the buttons and changedtitle background - still no luck getting this transparent fully without the black lines or getting the z-index to work

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h2 {
   position: absolute;
   bottom: 3px;
   left: 50px;
-  background-color: transparent;
+  /* background-color: transparent; */
   padding-left: 10px;
   padding-right: 15px;
   padding-bottom: 15px;
@@ -56,7 +56,7 @@ h2 {
   position: relative;
   /* align-items:end;
   justify-content: end; */
-  background-color: transparent;
+  /* background-color: transparent; */
   top: 43rem;
   left: 50px;
   padding-top: 10px;
@@ -76,7 +76,7 @@ h2 {
 
 .title3 {
   position: relative;
-  background-color: transparent;
+  /* background-color: transparent; */
   top: 47rem;
   left: 50px;
   padding-top: 10px;
@@ -96,7 +96,7 @@ h2 {
 
 .title4 {
   position: relative;
-  background-color: transparent;
+  /* background-color: transparent; */
   top: 5rem;
   left: 50px;
   padding-top: 20px;
@@ -109,9 +109,16 @@ h2 {
   justify-content: center;
 }
 
-/* .button {
-  background-color: blueviolet;
-} */
+.button {
+  padding: 10px 20px;
+  border: 2px solid white;
+  background-color: transparent;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: grab;
+}
 
 .footer {
   display: flex;
